refactoring to java 8